feat: add NotFoundPage component and implement 404 error handling; enhance password validation in CompleteRegistration

--- a/index.html
+++ b/index.html
@@ -13,5 +13,19 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script>window.neetoCal = window.neetoCal || { embed: function(){(neetoCal.q=neetoCal.q||[]).push(arguments)} };</script>
+    <script async
+            src="https://cdn.neetocal.com/javascript/embed.js">
+    </script>
+    <script>
+      neetoCal.embed({
+        type: "elementClick",
+        id: "a8c7f98c-010b-495e-8fc2-067f9c6d38b8",
+        organization: "educonnect-digital-solutions",
+        elementSelector: "#open-popup-button",
+        isSidebarAndCoverImgHidden: "false",
+        shouldForwardQueryParams: "false"
+      });
+    </script>
   </body>
 </html>
